[tool.poetry]
name = "main"
version = "0.1.0"
description = "Flask + GroqAI Journaling App"
authors = ["Sreethan Kudikala <sreethan.thykudikala@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.14"
flask = "^3.0.0"
groq = "^0.5.0"
requests = "2.31.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

